...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_user_profile">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pet_cards_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        tools:itemCount="1"
        tools:listitem="@layout/pet_card" />

...
