...

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:buttonSize="wide" />
    </LinearLayout>
</RelativeLayout>
