<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_profile_linear_2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/cat" />

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/user_icon"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/baseline_settings_24" />
        </RelativeLayout>

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="User name"
            android:fontFamily="sans-serif"
            android:textSize="20dp"
            android:paddingBottom="5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/location_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/location"
                android:paddingRight="10dp"
                android:src="@drawable/baseline_place_black_18" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Location"
                android:fontFamily="sans-serif-light"
                android:textSize="15dp"/>
        </RelativeLayout>

        <View style="@style/Divider.Horizontal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/user_phone"
                android:paddingRight="10dp"
                android:src="@drawable/baseline_call_black_18" />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="phone number"
                android:fontFamily="sans-serif"
                android:textSize="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/user_email"
                android:paddingRight="10dp"
                android:src="@drawable/baseline_email_black_18" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="email"
                android:fontFamily="sans-serif"
                android:textSize="15dp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Ваши питомцы"
            android:fontFamily="sans-serif"
            android:textSize="20dp"
            android:paddingBottom="5dp"/>

        <Button
            android:id="@+id/add_pet"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="#B3000000"
            android:text="Добавить питомца!" />
    </LinearLayout>

</LinearLayout>