...
            android:paddingTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="30dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/gender_female" />

...
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/login_phone_3"
            android:inputType="phone" />

        <Button
            android:id="@+id/login_submit_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_button_submit"
...
